divje voor fixed prox graph toegevoegd

--- a/overview/general.html
+++ b/overview/general.html
@@ -54,6 +54,8 @@
                     </div>
                     <h3 id="general-vis-info"></h3>
                 </div>
+                <div id="fixed-prox-div">
+                </div>
             </center>
         </main>
         <script src="js/dimensions.js" defer></script>
