extra findings voor floor 1

--- a/overview/findings.html
+++ b/overview/findings.html
@@ -59,8 +59,8 @@
                     </p>
                     <h3>Floor 1</h3>
                     <p>
-                        <b>Lights Power:</b> Zones 3, 8a en 8b zijn constant, ook over de weekenden. De overige zones fluctueren veel doordeweeks maar zijn 0 in de weekenden<br/>
-                        <b>Equipment Power:</b> Zones 3, 8a, 8b zijn constant, ook over de weekended. De overige zones fluctueren veel doordeweeks maar zijn laag (~100/150) in de weekenden<br/>
+                        <b>Lights Power:</b> Zones 3, 8a en 8b zijn constant, ook over de weekenden. De overige zones fluctueren veel doordeweeks maar zijn 0 in de weekenden. Zone 2 heeft alleen een enkele piek op 31 mei midden op de dag en voor de rest is het overal 0<br/>
+                        <b>Equipment Power:</b> Zones 3, 8a, 8b zijn constant, ook over de weekenden. De overige zones fluctueren veel doordeweeks maar zijn laag (~100/150) in de weekenden. Zone 2 heeft alleen een enkele piek op 31 mei midden op de dag en voor de rest is het overal constant iets onder de 400<br/>
                         <b>Thermostat Temp:</b> Zones 1, 4 en 7 zijn meestal outliers, lager en hoger dan de minima en maxima van de andere lijnen.<br/>
                         <b>Thermostat Heating Setpoint:</b> Zones 2, 4 en 7 zijn de enige zones die de andere niet volgen<br/>
                         <b>Thermostat Cooling Setpoint:</b> Zones 2, 4 en 7 zijn de enige zones die de andere niet volgen<br/>
