instructies voor gebruik van de visualisatie

--- a/overview/index.html
+++ b/overview/index.html
@@ -50,7 +50,11 @@
                     <br/>
                     <h2>Instructions</h2>
                     <p>
-                        The visualisations are split into multiple views. ...
+                        The visualisations are split into multiple views.
+                        The general data, in other words data for the entire building, is visualized on the General page.
+                        It includes the sensordata for the entire building, haziumdata of the sensors in the four zones and a graph for the fixed prox sensors, split into the three floors.
+                        Furthermore, the data includes readings for the seperate floors. These are split into seperate pages, which also include fixed prox data split into the prox zones per floor, instead of split per floor.
+                        Finally there is a Findings page, which discusses the results from the visualisations, including patterns, anomalies and relationships.
                     </p>
                     <br/>
                     <h2>Tools</h2>
@@ -62,7 +66,7 @@
                     <br/>
                     <h2>Credits</h2>
                     <p>
-                        Made by .. for the Programming project in 2016. Special thanks to Gosia for the idea and the support throughout the project and to Sascha for the supervision.
+                        Made by Team Gosia Warriors for the Programming project in 2016. Special thanks to Gosia for the idea and the support throughout the project and to Sascha for the supervision.
                     </p>
                 </div>
             </center>
