--- a/overview/general.html
+++ b/overview/general.html
@@ -55,10 +55,18 @@
                     <h3 id="general-vis-info"></h3>
                 </div>
                 <div id="fixed-prox-div">
+                    <h2>Fixed prox data</h2>
+                    <div id="general-checkboxes" class="checkboxes">
+        			    <label for="floor1"><input type="checkbox" id="prox-f1" class="prox-checkbox" value = "general_floor_1" name = "general_floor_1_slider" checked/> <span id="f1-text" class="color1-text">Floor 1</span></label>
+        			    <label for="floor2"><input type="checkbox" id="prox-f2" class="prox-checkbox" value = "general_floor_2" name = "general_floor_2_slider" checked/> <span id="f2-text" class="color2-text">Floor 2</span></label>
+        			    <label for="floor3"><input type="checkbox" id="prox-f3" class="prox-checkbox" value = "general_floor_3" name = "general_floor_3_slider" checked/> <span id="f3-text" class="color3-text">Floor 3</span></label>
+        			</div>
                 </div>
             </center>
         </main>
         <script src="js/dimensions.js" defer></script>
         <script src="js/general.js" defer></script>
+        <script src="js/general-proxExtended2.js" defer></script>
+        <script src="js/general-dataMaker.js" defer></script>
     </body>
 </html>
