--- a/wessel/proxExtended2.html
+++ b/wessel/proxExtended2.html
@@ -5,7 +5,7 @@ Wessel de Jong
 10206620
 
 Programmeerproject
-Prox data 
+Prox data
 -->
 
 <!DOCTYPE html>
@@ -35,45 +35,48 @@ Prox data
         </header>
         <center>
 	    	<div id="general-checkboxes" class="checkboxes">
-			    <label for="floor1"><input type="checkbox" id="f1" class="checkbox" value = "general_floor_1" name = "general_floor_1_slider" checked/> <span id="f1-text">Floor 1</span></label>
-			    <label for="floor2"><input type="checkbox" id="f2" class="checkbox" value = "general_floor_2" name = "general_floor_2_slider" checked/> <span id="f1-text">Floor 2</span></label>
-			    <label for="floor3"><input type="checkbox" id="f3" class="checkbox" value = "general_floor_3" name = "general_floor_3_slider" checked/> <span id="f1-text">Floor 3</span></label>
+			    <label for="floor1"><input type="checkbox" id="f1" class="checkbox" value = "general_floor_1" name = "general_floor_1_slider" checked/> <span id="f1-text" class="color1-text">Floor 1</span></label>
+			    <label for="floor2"><input type="checkbox" id="f2" class="checkbox" value = "general_floor_2" name = "general_floor_2_slider" checked/> <span id="f2-text" class="color2-text">Floor 2</span></label>
+			    <label for="floor3"><input type="checkbox" id="f3" class="checkbox" value = "general_floor_3" name = "general_floor_3_slider" checked/> <span id="f3-text" class="color3-text">Floor 3</span></label>
 			</div>
 		</center>
         <center>
 	    	<div id="f1-checkboxes" class="checkboxes">
-			    <label for="zone1"><input type="checkbox" id="f1-zone1" class="checkbox" value = "svg_1_zone_1" name = "svg_1_zone_1_slider" checked/> <span id="f1-zone1-text">Zone 1</span></label>
-			    <label for="zone2"><input type="checkbox" id="f1-zone2" class="checkbox" value = "svg_1_zone_2" name = "svg_1_zone_2_slider" checked/> <span id="f1-zone2-text">Zone 2</span></label>
-			    <label for="zone3"><input type="checkbox" id="f1-zone3" class="checkbox" value = "svg_1_zone_3" name = "svg_1_zone_3_slider" checked/> <span id="f1-zone3-text">Zone 3</span></label>
-			    <label for="zone4"><input type="checkbox" id="f1-zone4" class="checkbox" value = "svg_1_zone_4" name = "svg_1_zone_4_slider" checked/> <span id="f1-zone4-text">Zone 4</span></label>
-			    <label for="zone5"><input type="checkbox" id="f1-zone5" class="checkbox" value = "svg_1_zone_5" name = "svg_1_zone_5_slider" checked/> <span id="f1-zone5-text">Zone 5</span></label>
-			    <label for="zone6"><input type="checkbox" id="f1-zone6" class="checkbox" value = "svg_1_zone_6" name = "svg_1_zone_6_slider" checked/> <span id="f1-zone6-text">Zone 6</span></label>
-			    <label for="zone7"><input type="checkbox" id="f1-zone7" class="checkbox" value = "svg_1_zone_7" name = "svg_1_zone_7_slider" checked/> <span id="f1-zone7-text">Zone 7</span></label>
-			    <label for="zone8"><input type="checkbox" id="f1-zone8" class="checkbox" value = "svg_1_zone_8" name = "svg_1_zone_8_slider" checked/> <span id="f1-zone8-text">Zone 8</span></label>
+			    <label for="zone1"><input type="checkbox" id="f1-zone1" class="checkbox" value = "svg_1_zone_1" name = "svg_1_zone_1_slider" checked/> <span id="f1-zone1-text" class="color1-text">Zone 1</span></label>
+			    <label for="zone2"><input type="checkbox" id="f1-zone2" class="checkbox" value = "svg_1_zone_2" name = "svg_1_zone_2_slider" checked/> <span id="f1-zone2-text" class="color2-text">Zone 2</span></label>
+			    <label for="zone3"><input type="checkbox" id="f1-zone3" class="checkbox" value = "svg_1_zone_3" name = "svg_1_zone_3_slider" checked/> <span id="f1-zone3-text" class="color3-text">Zone 3</span></label>
+			    <label for="zone4"><input type="checkbox" id="f1-zone4" class="checkbox" value = "svg_1_zone_4" name = "svg_1_zone_4_slider" checked/> <span id="f1-zone4-text" class="color4-text">Zone 4</span></label>
+			    <label for="zone5"><input type="checkbox" id="f1-zone5" class="checkbox" value = "svg_1_zone_5" name = "svg_1_zone_5_slider" checked/> <span id="f1-zone5-text" class="color5-text">Zone 5</span></label>
+			    <label for="zone6"><input type="checkbox" id="f1-zone6" class="checkbox" value = "svg_1_zone_6" name = "svg_1_zone_6_slider" checked/> <span id="f1-zone6-text" class="color6-text">Zone 6</span></label>
+			    <label for="zone7"><input type="checkbox" id="f1-zone7" class="checkbox" value = "svg_1_zone_7" name = "svg_1_zone_7_slider" checked/> <span id="f1-zone7-text" class="color7-text">Zone 7</span></label>
+			    <label for="zone8"><input type="checkbox" id="f1-zone8" class="checkbox" value = "svg_1_zone_8" name = "svg_1_zone_8_slider" checked/> <span id="f1-zone8-text" class="color8-text">Zone 8</span></label>
 			</div>
 		</center>
 		<center>
 	    	<div id="f2-checkboxes" class="checkboxes">
-			    <label for="zone1"><input type="checkbox" id="f2-zone1" class="checkbox" value = "svg_2_zone_1" name = "svg_2_zone_1_slider" checked/> <span id="f2-zone1-text">Zone 1</span></label>
-			    <label for="zone2"><input type="checkbox" id="f2-zone2" class="checkbox" value = "svg_2_zone_2" name = "svg_2_zone_2_slider" checked/> <span id="f2-zone2-text">Zone 2</span></label>
-			    <label for="zone3"><input type="checkbox" id="f2-zone3" class="checkbox" value = "svg_2_zone_3" name = "svg_2_zone_3_slider" checked/> <span id="f2-zone3-text">Zone 3</span></label>
-			    <label for="zone4"><input type="checkbox" id="f2-zone4" class="checkbox" value = "svg_2_zone_4" name = "svg_2_zone_4_slider" checked/> <span id="f2-zone4-text">Zone 4</span></label>
-			    <label for="zone5"><input type="checkbox" id="f2-zone5" class="checkbox" value = "svg_2_zone_5" name = "svg_2_zone_5_slider" checked/> <span id="f2-zone5-text">Zone 5</span></label>
-			    <label for="zone6"><input type="checkbox" id="f2-zone6" class="checkbox" value = "svg_2_zone_6" name = "svg_2_zone_6_slider" checked/> <span id="f2-zone6-text">Zone 6</span></label>
-			    <label for="zone7"><input type="checkbox" id="f2-zone7" class="checkbox" value = "svg_2_zone_7" name = "svg_2_zone_7_slider" checked/> <span id="f2-zone7-text">Zone 7</span></label>
+			    <label for="zone1"><input type="checkbox" id="f2-zone1" class="checkbox" value = "svg_2_zone_1" name = "svg_2_zone_1_slider" checked/> <span id="f2-zone1-text" class="color1-text">Zone 1</span></label>
+			    <label for="zone2"><input type="checkbox" id="f2-zone2" class="checkbox" value = "svg_2_zone_2" name = "svg_2_zone_2_slider" checked/> <span id="f2-zone2-text" class="color2-text">Zone 2</span></label>
+			    <label for="zone3"><input type="checkbox" id="f2-zone3" class="checkbox" value = "svg_2_zone_3" name = "svg_2_zone_3_slider" checked/> <span id="f2-zone3-text" class="color3-text">Zone 3</span></label>
+			    <label for="zone4"><input type="checkbox" id="f2-zone4" class="checkbox" value = "svg_2_zone_4" name = "svg_2_zone_4_slider" checked/> <span id="f2-zone4-text" class="color4-text">Zone 4</span></label>
+			    <label for="zone5"><input type="checkbox" id="f2-zone5" class="checkbox" value = "svg_2_zone_5" name = "svg_2_zone_5_slider" checked/> <span id="f2-zone5-text" class="color5-text">Zone 5</span></label>
+			    <label for="zone6"><input type="checkbox" id="f2-zone6" class="checkbox" value = "svg_2_zone_6" name = "svg_2_zone_6_slider" checked/> <span id="f2-zone6-text" class="color6-text">Zone 6</span></label>
+			    <label for="zone7"><input type="checkbox" id="f2-zone7" class="checkbox" value = "svg_2_zone_7" name = "svg_2_zone_7_slider" checked/> <span id="f2-zone7-text" class="color7-text">Zone 7</span></label>
 			</div>
 		</center>
 		<center>
 	    	<div id="f3-checkboxes" class="checkboxes">
-			    <label for="zone1"><input type="checkbox" id="f3-zone1" class="checkbox" value = "svg_3_zone_1" name = "svg_3_zone_1_slider" checked/> <span id="f3-zone1-text">Zone 1</span></label>
-			    <label for="zone2"><input type="checkbox" id="f3-zone2" class="checkbox" value = "svg_3_zone_2" name = "svg_3_zone_2_slider" checked/> <span id="f3-zone2-text">Zone 2</span></label>
-			    <label for="zone3"><input type="checkbox" id="f3-zone3" class="checkbox" value = "svg_3_zone_3" name = "svg_3_zone_3_slider" checked/> <span id="f3-zone3-text">Zone 3</span></label>
-			    <label for="zone4"><input type="checkbox" id="f3-zone4" class="checkbox" value = "svg_3_zone_4" name = "svg_3_zone_4_slider" checked/> <span id="f3-zone4-text">Zone 4</span></label>
-			    <label for="zone5"><input type="checkbox" id="f3-zone5" class="checkbox" value = "svg_3_zone_5" name = "svg_3_zone_5_slider" checked/> <span id="f3-zone5-text">Zone 5</span></label>
-			    <label for="zone6"><input type="checkbox" id="f3-zone6" class="checkbox" value = "svg_3_zone_6" name = "svg_3_zone_6_slider" checked/> <span id="f3-zone6-text">Zone 6</span></label>
-			    <label for="ServerRoom"><input type="checkbox" id="f3-ServerRoom" class="checkbox" value = "svg_3_zone_ServerRoom" name = "svg_3_zone_ServerRoom_slider" checked/> <span id="f3-ServerRoom-text">Zone ServerRoom</span></label>
+			    <label for="zone1"><input type="checkbox" id="f3-zone1" class="checkbox" value = "svg_3_zone_1" name = "svg_3_zone_1_slider" checked/> <span id="f3-zone1-text" class="color1-text">Zone 1</span></label>
+			    <label for="zone2"><input type="checkbox" id="f3-zone2" class="checkbox" value = "svg_3_zone_2" name = "svg_3_zone_2_slider" checked/> <span id="f3-zone2-text" class="color2-text">Zone 2</span></label>
+			    <label for="zone3"><input type="checkbox" id="f3-zone3" class="checkbox" value = "svg_3_zone_3" name = "svg_3_zone_3_slider" checked/> <span id="f3-zone3-text" class="color3-text">Zone 3</span></label>
+			    <label for="zone4"><input type="checkbox" id="f3-zone4" class="checkbox" value = "svg_3_zone_4" name = "svg_3_zone_4_slider" checked/> <span id="f3-zone4-text" class="color4-text">Zone 4</span></label>
+			    <label for="zone5"><input type="checkbox" id="f3-zone5" class="checkbox" value = "svg_3_zone_5" name = "svg_3_zone_5_slider" checked/> <span id="f3-zone5-text" class="color5-text">Zone 5</span></label>
+			    <label for="zone6"><input type="checkbox" id="f3-zone6" class="checkbox" value = "svg_3_zone_6" name = "svg_3_zone_6_slider" checked/> <span id="f3-zone6-text" class="color6-text">Zone 6</span></label>
+			    <label for="ServerRoom"><input type="checkbox" id="f3-ServerRoom" class="checkbox" value = "svg_3_zone_ServerRoom" name = "svg_3_zone_ServerRoom_slider" checked/> <span id="f3-ServerRoom-text" class="color7-text">Zone ServerRoom</span></label>
 			</div>
 		</center>
+        <center>
+            <div id = "linegraph"></div>
+        </center>
 		</br>
 		<!-- <center>
                 <div id="dropdown-div" class="vis">
@@ -94,12 +97,3 @@ Prox data
 		<!-- <script src="dataBas.js"></script> -->
 	</body>
 </html>
-
-
-
-
-
-
-
-
-
