--- a/overview/general.html
+++ b/overview/general.html
@@ -66,7 +66,8 @@
         </main>
         <script src="js/dimensions.js" defer></script>
         <script src="js/general.js" defer></script>
-        <script src="js/general-proxExtended2.js" defer></script>
-        <script src="js/general-dataMaker.js" defer></script>
+        <script src="js/overview-proxExtended2.js" defer></script>
+        <script src="js/overview-dataMaker.js" defer></script>
+        <script src="js/general-prox-ui.js" defer></script>
     </body>
 </html>
