--- a/overview/floor1.html
+++ b/overview/floor1.html
@@ -66,9 +66,25 @@
                     </div>
                     <h3 id="f1-vis-info"></h3>
                 </div>
+                <div id="fixed-prox-div">
+                    <h3>Fixed prox data</h3>
+                    <div id="f1-prox-checkboxes" class="checkboxes">
+        			    <label for="zone1"><input type="checkbox" id="f1-prox-zone1" class="prox-checkbox" value = "svg_1_zone_1" name = "svg_1_zone_1_slider" checked/> <span id="f1-prox-zone1-text" class="color1-text">Zone 1</span></label>
+        			    <label for="zone2"><input type="checkbox" id="f1-prox-zone2" class="prox-checkbox" value = "svg_1_zone_2" name = "svg_1_zone_2_slider" checked/> <span id="f1-prox-zone2-text" class="color2-text">Zone 2</span></label>
+        			    <label for="zone3"><input type="checkbox" id="f1-prox-zone3" class="prox-checkbox" value = "svg_1_zone_3" name = "svg_1_zone_3_slider" checked/> <span id="f1-prox-zone3-text" class="color3-text">Zone 3</span></label>
+        			    <label for="zone4"><input type="checkbox" id="f1-prox-zone4" class="prox-checkbox" value = "svg_1_zone_4" name = "svg_1_zone_4_slider" checked/> <span id="f1-prox-zone4-text" class="color4-text">Zone 4</span></label>
+        			    <label for="zone5"><input type="checkbox" id="f1-prox-zone5" class="prox-checkbox" value = "svg_1_zone_5" name = "svg_1_zone_5_slider" checked/> <span id="f1-prox-zone5-text" class="color5-text">Zone 5</span></label>
+        			    <label for="zone6"><input type="checkbox" id="f1-prox-zone6" class="prox-checkbox" value = "svg_1_zone_6" name = "svg_1_zone_6_slider" checked/> <span id="f1-prox-zone6-text" class="color6-text">Zone 6</span></label>
+        			    <label for="zone7"><input type="checkbox" id="f1-prox-zone7" class="prox-checkbox" value = "svg_1_zone_7" name = "svg_1_zone_7_slider" checked/> <span id="f1-prox-zone7-text" class="color7-text">Zone 7</span></label>
+        			    <label for="zone8"><input type="checkbox" id="f1-prox-zone8" class="prox-checkbox" value = "svg_1_zone_8" name = "svg_1_zone_8_slider" checked/> <span id="f1-prox-zone8-text" class="color8-text">Zone 8</span></label>
+        			</div>
+                </div>
             </center>
         </main>
         <script src="js/dimensions.js" defer></script>
         <script src="js/floor1.js" defer></script>
+        <script src="js/overview-proxExtended2.js" defer></script>
+        <script src="js/overview-dataMaker.js" defer></script>
+        <script src="js/f1-prox-ui.js" defer></script>
     </body>
 </html>
