--- a/overview/floor3.html
+++ b/overview/floor3.html
@@ -73,9 +73,24 @@
                     </div>
                     <h3 id="f3-vis-info"></h3>
                 </div>
+                <div id="fixed-prox-div">
+                    <h3>Fixed prox data</h3>
+                    <div id="f3-checkboxes" class="checkboxes">
+        			    <label for="zone1"><input type="checkbox" id="f3-zone1" class="prox-checkbox" value = "svg_3_zone_1" name = "svg_3_zone_1_slider" checked/> <span id="f3-prox-zone1-text" class="color1-text">Zone 1</span></label>
+        			    <label for="zone2"><input type="checkbox" id="f3-zone2" class="prox-checkbox" value = "svg_3_zone_2" name = "svg_3_zone_2_slider" checked/> <span id="f3-prox-zone2-text" class="color2-text">Zone 2</span></label>
+        			    <label for="zone3"><input type="checkbox" id="f3-zone3" class="prox-checkbox" value = "svg_3_zone_3" name = "svg_3_zone_3_slider" checked/> <span id="f3-prox-zone3-text" class="color3-text">Zone 3</span></label>
+        			    <label for="zone4"><input type="checkbox" id="f3-zone4" class="prox-checkbox" value = "svg_3_zone_4" name = "svg_3_zone_4_slider" checked/> <span id="f3-prox-zone4-text" class="color4-text">Zone 4</span></label>
+        			    <label for="zone5"><input type="checkbox" id="f3-zone5" class="prox-checkbox" value = "svg_3_zone_5" name = "svg_3_zone_5_slider" checked/> <span id="f3-prox-zone5-text" class="color5-text">Zone 5</span></label>
+        			    <label for="zone6"><input type="checkbox" id="f3-zone6" class="prox-checkbox" value = "svg_3_zone_6" name = "svg_3_zone_6_slider" checked/> <span id="f3-prox-zone6-text" class="color6-text">Zone 6</span></label>
+        			    <label for="ServerRoom"><input type="checkbox" id="f3-ServerRoom" class="prox-checkbox" value = "svg_3_zone_ServerRoom" name = "svg_3_zone_ServerRoom_slider" checked/> <span id="f3-prox-ServerRoom-text" class="color7-text">Zone ServerRoom</span></label>
+        			</div>
+                </div>
             </center>
         </main>
         <script src="js/dimensions.js" defer></script>
         <script src="js/floor3.js" defer></script>
+        <script src="js/overview-proxExtended2.js" defer></script>
+        <script src="js/overview-dataMaker.js" defer></script>
+        <script src="js/f3-prox-ui.js" defer></script>
     </body>
 </html>
