alle visualisaties staan nu op 1 pagina genaamd visualisations.html, waardoor er slechts 1 keer data geladen hoeft te worden en de keuzes van de opties onthouden worden. Er zijn knoppen om van verdieping te wisselen en het is super leuk allemaal

--- a/overview/floor1.html
+++ b/overview/floor1.html
@@ -67,7 +67,7 @@
                     <h3 id="f1-vis-info"></h3>
                 </div>
                 <div id="fixed-prox-div">
-                    <h3>Fixed prox data</h3>
+                    <h3>Fixed prox data - Building</h3>
                     <div id="f1-prox-checkboxes" class="checkboxes">
         			    <label for="zone1"><input type="checkbox" id="f1-prox-zone1" class="prox-checkbox" value = "svg_1_zone_1" name = "svg_1_zone_1_slider" checked/> <span id="f1-prox-zone1-text" class="color1-text">Zone 1</span></label>
         			    <label for="zone2"><input type="checkbox" id="f1-prox-zone2" class="prox-checkbox" value = "svg_1_zone_2" name = "svg_1_zone_2_slider" checked/> <span id="f1-prox-zone2-text" class="color2-text">Zone 2</span></label>
