--- a/overview/findings.html
+++ b/overview/findings.html
@@ -14,10 +14,7 @@
                 <h1>Mini Challenge 2</h1>
                 <div id="navigation-buttons">
                     <button id="button-index" class="button" type="button" value="index.html">Index</button>
-                    <button id="button-general" class="button" type="button" value="general.html">General</button>
-                    <button id="button-f1" class="button" type="button" value="floor1.html">Floor 1</button>
-                    <button id="button-f2" class="button" type="button" value="floor2.html">Floor 2</button>
-                    <button id="button-f3" class="button" type="button" value="floor3.html">Floor 3</button>
+                    <button id="button-visualisations" class="button" type="button" value="visualisations.html">Visualisations</button>
                     <button id="button-findings" class="button" type="button" value="findings.html">Findings</button>
                 </div>
             </center>
