instructies even aangepast voor de 1-pagina visualisatie

--- a/overview/index.html
+++ b/overview/index.html
@@ -48,9 +48,9 @@
                     <h2>Instructions</h2>
                     <p>
                         The visualisations are split into multiple views.
-                        The general data, in other words data for the entire building, is visualized on the General page.
-                        It includes the sensordata for the entire building, haziumdata of the sensors in the four zones and a graph for the fixed prox sensors, split into the three floors.
-                        Furthermore, the data includes readings for the seperate floors. These are split into seperate pages, which also include fixed prox data split into the prox zones per floor, instead of split per floor.
+                        They can be found on the visualisations page.
+                        On the visualisations page there are multiple buttons to control which data is shown. You can pick from General, which is data from the entire building, and floors 1/2/3.
+                        The general data is split per floor while the floor data is split by zone, either HVAC or prox zone, depending on the data.
                         Finally there is a Findings page, which discusses the results from the visualisations, including patterns, anomalies and relationships.
                     </p>
                     <br/>
