--- a/overview/visualisations.html
+++ b/overview/visualisations.html
@@ -39,12 +39,12 @@
                             <option value="drybulbTemperature" unit="C">Drybulb Temperature</option>
                             <option value="loopTempSchedule" unit="C">Loop Temp Schedule</option>
                             <option value="heatScheduleValue" unit="C">HEAT Schedule Value</option>
-                            <option value="hvacElectricDemandPower" unit="C">HVAC Electric Demand Power</option>
+                            <option value="hvacElectricDemandPower" unit="W">HVAC Electric Demand Power</option>
                             <option value="pumpPower" unit="W">Pump Power</option>
                             <option value="supplySideInletMassFlowRate" unit="kg/s">Supply Side Inlet Mass Flow Rate</option>
                             <option value="supplySideInletTemperature" unit="C">Supply Side Inlet Temperature</option>
                             <option value="supplySideOutletTemperature" unit="C">Supply Side Outlet Temperature</option>
-                            <option value="totalElectricDemandPower" unit="C">Total Electric Demand Power</option>
+                            <option value="totalElectricDemandPower" unit="W">Total Electric Demand Power</option>
                             <option value="waterHeaterGasRate" unit="W">Water Heater Gas Rate</option>
                             <option value="waterHeaterSetpoint" unit="C">Water Heater Setpoint</option>
                             <option value="waterHeaterTankTemperature" unit="C">Water Heater Tank Temperature</option>
