de kaart is robuust onder zoom

--- a/overview/visualisations.html
+++ b/overview/visualisations.html
@@ -33,7 +33,7 @@
                 <div id="wrapper-general" class="wrapper">
                     <div id="floor-graphs-general-focus" class="wrapper-content wrapper-focus"></div>
                     <div id="floor-graphs-general" class="floor-graphs-div wrapper-content wrapper-minis">
-                        <div id="general-div" class="general-vis">
+                        <div id="general-div" class="general-vis vis">
                             <h2>General readings</h2>
                             <select id="general-dropdown" name="sensors">
                                 <option value="coolScheduleValue" unit="C" selected>COOL Schedule Value</option>
@@ -63,7 +63,7 @@
                             </div>
                             <h3 id="general-vis-info"></h3>
                         </div>
-                        <div id="fixed-prox-div-general" class="general-vis">
+                        <div id="fixed-prox-div-general" class="general-vis vis">
                             <h3>Fixed prox data - Building</h3>
                             <div id="general-checkboxes" class="checkboxes">
                 			    <label for="floor1"><input type="checkbox" id="prox-f1" class="prox-checkbox" value = "general_floor_1" name = "general_floor_1_slider" checked/> <span id="f1-text" class="color1-text">Floor 1</span></label>
@@ -76,7 +76,7 @@
                 <div id="wrapper-floor-1" class="wrapper">
                     <div id="floor-graphs-floor-1-focus" class="wrapper-content wrapper-focus"></div>
                     <div id="floor-graphs-floor-1" class="floor-graphs-div wrapper-content wrapper-minis">
-                        <div id="f1-div" class="f1-vis">
+                        <div id="f1-div" class="f1-vis vis">
                             <h2>Floor 1 readings</h2>
                             <div id="f1-dropdown">
                                 <select id="f1-sensors" name="sensors">
@@ -118,7 +118,7 @@
                             </div>
                             <h3 id="f1-vis-info"></h3>
                         </div>
-                        <div id="fixed-prox-div-floor-1" class="f1-vis">
+                        <div id="fixed-prox-div-floor-1" class="f1-vis vis">
                             <h3>Fixed prox data - Floor 1</h3>
                             <div id="f1-prox-checkboxes" class="checkboxes">
                 			    <label for="zone1"><input type="checkbox" id="f1-prox-zone1" class="prox-checkbox" value = "svg_1_zone_1" name = "svg_1_zone_1_slider" checked/> <span id="f1-prox-zone1-text" class="color1-text">Zone 1</span></label>
@@ -136,7 +136,7 @@
                 <div id="wrapper-floor-2" class="wrapper">
                     <div id="floor-graphs-floor-2-focus" class="wrapper-content wrapper-focus"></div>
                     <div id="floor-graphs-floor-2" class="floor-graphs-div wrapper-content wrapper-minis">
-                        <div id="f2-div" class="f2-vis">
+                        <div id="f2-div" class="f2-vis vis">
                             <h2>Floor 2 readings</h2>
                             <div id="f2-dropdown">
                                 <select id="f2-sensors" name="sensors">
@@ -186,7 +186,7 @@
                             </div>
                             <h3 id="f2-vis-info"></h3>
                         </div>
-                        <div id="fixed-prox-div-floor-2" class="f2-vis">
+                        <div id="fixed-prox-div-floor-2" class="f2-vis vis">
                             <h3>Fixed prox data - Floor 2</h3>
                             <div id="f2-checkboxes" class="checkboxes">
                 			    <label for="zone1"><input type="checkbox" id="f2-zone1" class="prox-checkbox" value = "svg_2_zone_1" name = "svg_2_zone_1_slider" checked/> <span id="f2-prox-zone1-text" class="color1-text">Zone 1</span></label>
@@ -203,7 +203,7 @@
                 <div id="wrapper-floor-3" class="wrapper">
                     <div id="floor-graphs-floor-3-focus" class="wrapper-content wrapper-focus"></div>
                     <div id="floor-graphs-floor-3" class="floor-graphs-div wrapper-content wrapper-minis">
-                        <div id="f3-div" class="f3-vis">
+                        <div id="f3-div" class="f3-vis vis">
                             <h2>Floor 3 readings</h2>
                             <div id="f3-dropdown">
                                 <select id="f3-sensors" name="sensors">
@@ -252,7 +252,7 @@
                             </div>
                             <h3 id="f3-vis-info"></h3>
                         </div>
-                        <div id="fixed-prox-div-floor-3" class="f3-vis">
+                        <div id="fixed-prox-div-floor-3" class="f3-vis vis">
                             <h3>Fixed prox data - Floor 3</h3>
                             <div id="f3-checkboxes" class="checkboxes">
                 			    <label for="zone1"><input type="checkbox" id="f3-zone1" class="prox-checkbox" value = "svg_3_zone_1" name = "svg_3_zone_1_slider" checked/> <span id="f3-prox-zone1-text" class="color1-text">Zone 1</span></label>
