mooiste kaart van het land

--- a/map_vis/floor1.html
+++ b/map_vis/floor1.html
@@ -6,6 +6,7 @@
         <script src="libraries/d3.min.js"></script>
         <script src="libraries/d3-queue.min.js"></script>
         <script src="libraries/jquery-2.2.2.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.10.0/d3-legend.js"></script>
         <title>VAC MC2 - Floor 1</title>
     </head>
     <body>
@@ -53,6 +54,23 @@
                     <br>
                     <h3 id="f1-vis-info"></h3>
                 </div>
+                <div>
+                    <select id="day_dropdown">
+                        <option value="2016-05-31">31 may 2016</option>
+                        <option value="2016-06-01">01 june 2016</option>
+                        <option value="2016-06-02">02 june 2016</option>
+                        <option value="2016-06-03">03 june 2016</option>
+                        <option value="2016-06-04">04 june 2016</option>
+                        <option value="2016-06-05">05 june 2016</option>
+                        <option value="2016-06-06">06 june 2016</option>
+                        <option value="2016-06-07">07 june 2016</option>
+                        <option value="2016-06-08">08 june 2016</option>
+                        <option value="2016-06-09">09 june 2016</option>
+                        <option value="2016-06-10">10 june 2016</option>
+                        <option value="2016-06-11">11 june 2016</option>   
+                        <option value="2016-06-12">12 june 2016</option>                                                                                                
+                    </select>
+                </div>                
                 <div id="slider-div">
                     <h3 id="slider-value"></h3>
                 </div>
