containers toegevoegd voor de heatmaps

--- a/overview/visualisations.html
+++ b/overview/visualisations.html
@@ -131,6 +131,8 @@
                 			    <label for="zone8"><input type="checkbox" id="f1-prox-zone8" class="prox-checkbox" value = "svg_1_zone_8" name = "svg_1_zone_8_slider" checked/> <span id="f1-prox-zone8-text" class="color8-text">Zone 8</span></label>
                 			</div>
                         </div>
+                        <div id="heatmaps-floor-1" class="f1-vis vis">
+                        </div>
                     </div>
                 </div>
                 <div id="wrapper-floor-2" class="wrapper">
@@ -198,6 +200,7 @@
                 			    <label for="zone7"><input type="checkbox" id="f2-zone7" class="prox-checkbox" value = "svg_2_zone_7" name = "svg_2_zone_7_slider" checked/> <span id="f2-prox-zone7-text" class="color7-text">Zone 7</span></label>
                 			</div>
                         </div>
+                        <div id="heatmaps-floor-2"></div>
                     </div>
                 </div>
                 <div id="wrapper-floor-3" class="wrapper">
@@ -264,11 +267,13 @@
                 			    <label for="ServerRoom"><input type="checkbox" id="f3-ServerRoom" class="prox-checkbox" value = "svg_3_zone_ServerRoom" name = "svg_3_zone_ServerRoom_slider" checked/> <span id="f3-prox-ServerRoom-text" class="color7-text">Zone ServerRoom</span></label>
                 			</div>
                         </div>
+                        <div id="heatmaps-floor-3"></div>
                     </div>
                 </div>
             </center>
         </main>
         <script src="js/dimensions.js" defer></script>
+        <!-- <script src="js/handleheatmap.js" defer></script> -->
         <script src="js/general.js" defer></script>
         <script src="js/floor1.js" defer></script>
         <script src="js/floor2.js" defer></script>
