lege svgs ingeladen die ook on click inzoomen en nu blijven de posities van de minis bewaard dus dan raak je ze niet kwijt

--- a/overview/visualisations.html
+++ b/overview/visualisations.html
@@ -200,7 +200,7 @@
                 			    <label for="zone7"><input type="checkbox" id="f2-zone7" class="prox-checkbox" value = "svg_2_zone_7" name = "svg_2_zone_7_slider" checked/> <span id="f2-prox-zone7-text" class="color7-text">Zone 7</span></label>
                 			</div>
                         </div>
-                        <div id="heatmaps-floor-2"></div>
+                        <div id="heatmaps-floor-2" class="f2-vis vis"></div>
                     </div>
                 </div>
                 <div id="wrapper-floor-3" class="wrapper">
@@ -267,7 +267,7 @@
                 			    <label for="ServerRoom"><input type="checkbox" id="f3-ServerRoom" class="prox-checkbox" value = "svg_3_zone_ServerRoom" name = "svg_3_zone_ServerRoom_slider" checked/> <span id="f3-prox-ServerRoom-text" class="color7-text">Zone ServerRoom</span></label>
                 			</div>
                         </div>
-                        <div id="heatmaps-floor-3"></div>
+                        <div id="heatmaps-floor-3" class="f3-vis vis"></div>
                     </div>
                 </div>
             </center>
@@ -278,6 +278,7 @@
         <script src="js/floor1.js" defer></script>
         <script src="js/floor2.js" defer></script>
         <script src="js/floor3.js" defer></script>
+        <script src="js/appendsvgs.js" defer></script>
         <script src="js/overview-proxExtended2.js" defer></script>
         <script src="js/overview-dataMaker.js" defer></script>
     </body>
