--- a/overview/findings.html
+++ b/overview/findings.html
@@ -14,7 +14,7 @@
                 <h1>Mini Challenge 2</h1>
                 <div id="navigation-buttons">
                     <button id="button-index" class="button" type="button" value="index.html">Index</button>
-                    <button id="button-visualisations" class="button" type="button" value="visualisations.html">Visualisations</button>
+                    <button id="button-graphs" class="button" type="button" value="graphs.html">Graphs</button>
                     <button id="button-findings" class="button" type="button" value="findings.html">Findings</button>
                 </div>
             </center>
