--- a/overview/graphs.html
+++ b/overview/graphs.html
@@ -15,6 +15,7 @@
                 <div id="navigation-buttons">
                     <button id="button-index" class="button" type="button" value="index.html">Index</button>
                     <button id="button-graphs" class="button" type="button" value="graphs.html">Graphs</button>
+                    <button id="button-heatmaps" class="button" type="button" value="heatmaps.html">Heatmaps</button>
                     <button id="button-findings" class="button" type="button" value="findings.html">Findings</button>
                 </div>
                 <br/>
