--- a/bootstrap/graphs.html
+++ b/bootstrap/graphs.html
@@ -83,7 +83,7 @@
 
                     <!-- findings -->
                     <section id="findings" class="three">
-                        <div class="container">
+                        <div class="container"> 
 
                             <center>
                                 <div id="floor-graphs-buttons">
@@ -96,6 +96,10 @@
                                 <p id="current-visible-floor" class="always-invisible"></p>
                                 <img id="loading-icon" src="img/loading.gif" alt="Loading..."></img>
                             </center>
+
+                            <br />
+
+                            <img id="wewantyou" src="images/dontpush.jpg" alt="" style="display: none"></img> 
 
                             <center>
                                 <div id="wrapper-general" class="wrapper">
