referentie toegevoegd naar trekker.html

--- a/overview/heatmaps.html
+++ b/overview/heatmaps.html
@@ -16,6 +16,7 @@
                     <button id="button-index" class="button" type="button" value="index.html">Index</button>
                     <button id="button-graphs" class="button" type="button" value="graphs.html">Graphs</button>
                     <button id="button-heatmaps" class="button" type="button" value="heatmaps.html">Heatmaps</button>
+                    <button id="button-trekker" class="button" type="button" value="trekker.html">Trekker</button>
                     <button id="button-findings" class="button" type="button" value="findings.html">Findings</button>
                 </div>
                 <br/>
