--- a/bootstrap/heatmaps-floor2.html
+++ b/bootstrap/heatmaps-floor2.html
@@ -77,7 +77,7 @@
                         <div class="container">
                             <br />
                             <header>
-                                <h2 class="alt">Heatmaps</p>
+                                <h2 class="alt"><strong>Heatmap floor 2</strong> <br /> <p class="header_info">The heatmap to the left represents all the data from the HVAC zones. This data can be selected in the dropdown underneath. The right heatmap represents the proximity data, with blue dots representing people found by the proximity robot. These can be found between 09:00/10:00 hours and 14:00/15:00 hours. This is because the proximity robot only moves around at these times. </p>
                             </header>
                         </div>
                     </section>                  
@@ -126,6 +126,7 @@
                                     <br>
                                     <h3 id="f2-vis-info"></h3>
                                 </div>
+                                <br />                                
                                 <div>
                                     <select id="day_dropdown">
                                         <option value="2016-05-31">31 may 2016</option>
@@ -143,9 +144,11 @@
                                         <option value="2016-06-12">12 june 2016</option>
                                     </select>
                                 </div>
+                                <br />                                
                                 <div id="slider-div">
                                     <h3 id="slider-value"></h3>
                                 </div>
+                                <br />
                                 <img id="loading-icon" src="img/loading.gif" alt="Loading..."></img>                           
                             </center>
                         </div>
