--- a/bootstrap/heatmaps.html
+++ b/bootstrap/heatmaps.html
@@ -78,7 +78,7 @@
                         <div class="container">
                             <br />
                             <header>
-                                <h2 class="alt">Heatmaps</p>
+                                <h2 class="alt"><strong>Heatmaps</strong> <br /> <p class="header_info">The heatmaps to the left represents all the data from the HVAC zones. This data can be selected in the dropdown underneath. The right heatmaps represents the proximity data, with blue dots representing people found by the proximity robot. These can be found between 09:00/10:00 hours and 14:00/15:00 hours. This is because the proximity robot only moves around at these times. </p>
                             </header>
                         </div>
                     </section>             
@@ -118,6 +118,7 @@
             <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
             <script src="assets/js/main.js"></script>
             <script src="js/dimensions.js"></script>
+            <script src="js/heatmaps.js"></script>
 
     </body>
 </html>
