--- a/bootstrap/index_findings.html
+++ b/bootstrap/index_findings.html
@@ -75,7 +75,8 @@
                         <div class="container">
                             <br />
                             <header>
-                                <h2 class="alt">Findings of this challenge</p>
+                                <h2 class="alt"><strong>Findings of this challenge</strong> <br /> 
+                                <p class="header_info">Here we discuss all the anomalies of the dataset.</p>
                             </header>
                         </div>
                     </section> 					
